# haskell-challenges

./: LICENSE  README.md
force-elems/: README.md  force-elems.cabal  stack.yaml
force-elems/src/: Lib.hs
force-elems/test/: Main.hs
h2-inspect-forced/: README.md  h2-inspect-forced.cabal
h2-inspect-forced/src/: Lib.hs
h2-inspect-forced/test/: Main.hs
h3-transform-typed/: README.md  h3-transform-typed.cabal
h3-transform-typed/src/: Lib.hs
h3-transform-typed/test/: Main.hs
h4-largest-powers/: README.md  h4-largest-powers.cabal
h4-largest-powers/src/: Lib.hs
h4-largest-powers/test/: Main.hs
h5-prerun-action/: README.md  h5-prerun-action.cabal  stack.yaml
h5-prerun-action/src/: Lib.hs
h5-prerun-action/test/: Main.hs
h6-indexed-folds/: README.md  h6-indexed-folds.cabal
h6-indexed-folds/src/: Lib.hs
h6-indexed-folds/test/: Main.hs
h7-shortest-longest/: README.md  h7-shortest-longest.cabal
h7-shortest-longest/src/: Lib.hs
h7-shortest-longest/test/: Main.hs
h8-foldr-foldlprime/: README.md  h8-foldr-foldlprime.cabal
h8-foldr-foldlprime/src/: Lib.hs
h8-foldr-foldlprime/test/: Main.hs
h9-traversable-search/: CHANGELOG.md  README.md  h9-traversable-search.cabal  stack.yaml
h9-traversable-search/src/: Lib.hs
h9-traversable-search/test/: Main.hs
j1-lazy-foldrM/: README.md  j1-lazy-foldrM.cabal  stack.yaml
j1-lazy-foldrM/src/: Lib.hs
j1-lazy-foldrM/test/: Main.hs
