name:                force-elems
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/force-elems#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  default-language:    Haskell2010
  build-depends: base >=4.7 && <5,
                 HUnit

test-suite force-elems-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options: -O2
  build-depends: base >=4.7 && <5,
                 HUnit,
                 force-elems
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/force-elems
