name:                h3-transform-typed
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/h3-transform-typed#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite h3-transform-typed-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options: -O2 -threaded -rtsopts "-with-rtsopts=-N"
  build-depends: base >=4.7 && <5,
                 tasty,
                 tasty-quickcheck,
                 h3-transform-typed
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/h3-transform-typed
