name:                h6-indexed-folds
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/h6-indexed-folds#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite h6-indexed-folds-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options: -O2 -threaded -rtsopts "-with-rtsopts=-N"
  build-depends: base >=4.7 && <5,
                 QuickCheck,
                 h6-indexed-folds
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/h6-indexed-folds
