name:                h7-shortest-longest
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/effectfully-ou/haskell-challenges/h7-shortest-longest#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite h7-shortest-longest-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options: -O2 -rtsopts "-with-rtsopts=-M8M"
  build-depends: base >=4.7 && <5,
                 tasty,
                 tasty-hunit,
                 tasty-quickcheck,
                 h7-shortest-longest
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/effectfully-ou/haskell-challenges
