cabal-version:       2.2

name:                h9-traversable-search
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/h9-traversable-search#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       containers
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite h9-traversable-search-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options: -O2 -rtsopts "-with-rtsopts=-A16M -M64M"
  build-depends: base >=4.7 && <5,
                 containers,
                 lens,
                 tasty,
                 tasty-hunit,
                 tasty-quickcheck,
                 QuickCheck,
                 h9-traversable-search
  default-language: Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/h9-traversable-search
